# corstupid

./: README.md
backend/: Cargo.toml  README.md
backend/src/: main.rs
frontend/: Cargo.toml  README.md
frontend/src/: lib.rs
